--- a/configure.ac
+++ b/configure.ac
@@ -1,24 +1,28 @@
 ## Process this file with autoconf to produce a configure script.
 
 ## Minimum Autoconf version
-AC_PREREQ(1.9)
+AC_PREREQ([2.59])
 
-AC_INIT([haveged],[1.4])
+AC_INIT([haveged],[1.7])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([/src/haveged.c])
+AC_CHECK_TYPES([uint32_t, uint8_t])
 
 HA_LDFLAGS=""
 
-## Make init script configurable
-AC_ARG_VAR(HA_DISTRO,[Init script template [default=redhat.in]])
-if test "x$HA_DISTRO" = "x"; then
-   HA_DISTRO="redhat.in"
-fi
+##libtool_start##
+AC_PROG_LIBTOOL
+AM_ENABLE_SHARED
+AM_DISABLE_STATIC
+LT_LANG([C])
+HAVEGE_LT_VERSION="1:0:0"
+AC_SUBST(HAVEGE_LT_VERSION)
+##libtool_end##
 
 ## Make capture diagnostic configurable
-AC_ARG_ENABLE(capture, AS_HELP_STRING([--enable-capture=[no/yes]],[Enable capture diagnostic [default=no]]),, enable_capture="no")
+AC_ARG_ENABLE(capture, AS_HELP_STRING([--enable-capture=[no/yes]],[Enable capture diagnostic. [default=no]]),, enable_capture="no")
 if test "x$enable_capture" = "xyes"; then
    AC_DEFINE(RAW_OUT_ENABLE, 1, [Define to 1 for capture diagnostic])
 fi
@@ -27,12 +31,27 @@ fi
 AC_ARG_ENABLE(daemon, AS_HELP_STRING([--enable-daemon=[yes/no]],[Enable daemon [default=yes if linux]]),, enable_daemon="x" )
 
 ## Make inject diagnostic configurable
-AC_ARG_ENABLE(inject, AS_HELP_STRING([--enable-inject=[no/yes]],[Enable inject diagnostic [default=no]]),, enable_inject="no")
+AC_ARG_ENABLE(inject, AS_HELP_STRING([--enable-inject=[no/yes]],[Enable inject diagnostic. [default=no]]),, enable_inject="no")
 if test "x$enable_inject" = "xyes"; then
    AC_DEFINE(RAW_IN_ENABLE, 1, [Define to 1 for injection diagnostic])
 fi
 
-## Make inject diagnostic configurable
+## Make self test features configurable
+AC_ARG_ENABLE(olt, AS_HELP_STRING([--enable-olt=[yes/no]],[Enable online tests [default=yes]]),, enable_olt="yes" )
+if test "x$enable_olt" = "xyes"; then
+   AC_DEFINE(ONLINE_TESTS_ENABLE, 1, [Define to 1 for online test features])
+fi
+
+## Make init configurable
+AC_ARG_ENABLE(init, AS_HELP_STRING([--enable-init=[type]],[Enable systemd or sysv template [default=sysv.redhat]]),, enable_init="none" )
+if test "x$enable_init" = "x"; then
+   enable_init="none"
+fi
+
+## Make clock_gettime configurable
+AC_ARG_ENABLE(clock_gettime, AS_HELP_STRING([--enable-clock_gettime=[no/yes]],[Enable clock_gettime. [default=no]]),, enable_clock_gettime="no")
+
+## Make multi-thread feature configurable
 AC_ARG_ENABLE(threads, AS_HELP_STRING([--enable-threads=[no/yes]],[Enable threads [default=no]]),, enable_threads="no")
 if test "x$enable_threads" = "xyes"; then
    AC_DEFINE(NUMBER_CORES, 4, [Define maxium number of collection threads])
@@ -40,7 +59,6 @@ if test "x$enable_threads" = "xyes"; then
 else
    AC_DEFINE(NUMBER_CORES, 1, [Define to single collection thread])
 fi
-
 
 ## Make nist self-test configurable
 AC_ARG_ENABLE(nistest, AS_HELP_STRING([--enable-nistest=[no/yes]],[Run NIST test suite [default=no]]),, enable_nistest="no")
@@ -63,7 +81,7 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MALLOC
 AC_FUNC_SELECT_ARGTYPES
 AC_TYPE_SIGNAL
-AC_CHECK_FUNCS([__rdtsc clock_gettime floor gettimeofday memset pow select sched_yield sqrt])
+AC_CHECK_FUNCS([__rdtsc floor gettimeofday memset pow select sched_yield sqrt])
 
 ## Checks for header files.
 AC_HEADER_STDC
@@ -87,20 +105,20 @@ AC_CANONICAL_HOST
 
 ## Determine if daemon interface to be included
 if test "x$enable_capture" == "xyes"; then
-   HA_DAEMON="no"
+   daemon_type="none"
 elif test "x$enable_inject" == "xyes"; then
-   HA_DAEMON="no"
+   daemon_type="none"
 elif test "x$enable_daemon" = "xyes"; then
-   HA_DAEMON="yes"
+   daemon_type="yes"
 elif test "x$enable_daemon" = "xno"; then
-   HA_DAEMON="no"
+   daemon_type="none"
 else
    case "$host_os" in
     linux*)
-      HA_DAEMON="yes"
+      daemon_type="yes"
    ;;
     *)
-      HA_DAEMON="no"
+      daemon_type="none"
    ;;
   esac
 fi 
@@ -136,21 +154,55 @@ case "$host" in
  ;;
 
  *)
-    HA_LDFLAGS="$HA_LDFLAGS -lrt"
+    enable_clock_gettime="yes"
     AC_DEFINE_UNQUOTED(HAVE_ISA_GENERIC, "$host", [Define generic host])
  ;;
 
 esac
 
-## Suppress daemon
-if test "$HA_DAEMON" = "no"; then
-    AC_DEFINE(NO_DAEMON, 1, [Define to 1 to supress daemon interface])
+## Check clock_getime option
+
+if test "x$enable_clock_gettime" = "xyes"; then
+    saved_libs=$LIBS
+    LIB_CLOCK_GETTIME=
+    AC_SEARCH_LIBS([clock_gettime], [rt posix4],
+      [test "$ac_cv_search_clock_gettime" = "none required" || LIB_CLOCK_GETTIME=$ac_cv_search_clock_gettime],
+      AC_MSG_ERROR([clock_gettime is required for host :"$host".]))
+    LIBS=$saved_libs
+    HA_LDFLAGS="$HA_LDFLAGS $LIB_CLOCK_GETTIME"
+    AC_DEFINE(ENABLE_CLOCK_GETTIME, 1, [Define to 1 for clock_gettime])
 fi
+
+
+## Determine init type
+
+if test "$daemon_type" = "none"; then
+    AC_DEFINE(NO_DAEMON, 1, [Define to 1 to suppress daemon interface])
+      init_type="none"
+else
+  case "$enable_init" in
+    service.*)
+       init_type="systemd"
+     ;;
+    sysv.*)
+       init_type="sysv"
+     ;;
+    *)
+       init_type="none"
+     ;;
+esac
+fi
+## AC_DEFINE_UNQUOTED(DAEMON_TYPE,"$daemon_type",[daemon type])
+
 ## Fixup install
 
-AC_SUBST(HA_DISTRO)
+AC_SUBST(HA_DISTRO,$enable_init):
+AM_CONDITIONAL(ENABLE_BIN, test "$daemon_type" = "none")
+AM_CONDITIONAL(ENABLE_SYSV, test "$init_type" = "sysv")
+AM_CONDITIONAL(ENABLE_SYSTEMD, test "$init_type" = "systemd")
+AM_CONDITIONAL(ENABLE_NOINIT, test "$init_type" = "none")
 
-## Set hardware depedent define for the build
+## Set hardware dependent define for the build
 
 AC_SUBST(HA_LDFLAGS)
 
