--- a/Makefile.am
+++ b/Makefile.am
@@ -4,10 +4,12 @@
 check_SCRIPTS = @HA_CHECK@
 
 # Files to be included in distribution
-EXTRA_DIST    = haveged.spec ent/test.sh ent/entitle.gif init.d/redhat.in init.d/lsb.in \
-                nist/test.sh nist/template9 \
+EXTRA_DIST    = ent/test.sh ent/entitle.gif init.d/service.fedora init.d/service.redhat \
+                init.d/sysv.lsb init.d/sysv.redhat nist/test.sh nist/template9 \
                 contrib/diags/data_prep.c contrib/diags/bins.p contrib/diags/inc.p \
-                contrib/diags/lognorm.r contrib/diags/lognorm.sh
+                contrib/diags/lognorm.r contrib/diags/lognorm.sh \
+                haveged.spec contrib/build/build.sh contrib/build/lib.spec contrib/build/nolib.spec \
+                contrib/build/havege_sample.c contrib/build/fedora.spec
 
 # Scripts run as check target
 EXTRA_SCRIPTS = ent/test.sh nist/test.sh
