--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in.
 
-man_MANS = haveged.8
+man_MANS = haveged.8 libhavege.3
 
 EXTRA_DIST = $(man_MANS)
 
