--- a/debian/rules
+++ b/debian/rules
@@ -12,3 +12,6 @@ override_dh_auto_configure:
 		dh_auto_configure -- --enable-nistest=yes; \
 		;; \
 	esac
+
+override_dh_strip:
+	dh_strip --dbg-package=libhavege1-dbg
