--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: haveged
 Section: misc
 Priority: extra
 Maintainer: Jérémy Bobbio <lunar@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), dh-autoreconf
+Build-Depends: debhelper (>= 9), dh-autoreconf
 Standards-Version: 3.9.3
 Homepage: http://www.issihosts.com/haveged/
 Vcs-Git: git://git.debian.org/git/collab-maint/haveged.git
