--- a/config.h.in
+++ b/config.h.in
@@ -188,6 +188,12 @@
 /* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #undef TIME_WITH_SYS_TIME
 
+/* Define to 1 for host tuning features */
+#undef TUNING_CPUID_ENABLE
+
+/* Define to 1 for host tuning features */
+#undef TUNING_VFS_ENABLE
+
 /* Version number of package */
 #undef VERSION
 
