--- a/init.d/Makefile.am
+++ b/init.d/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in.
 
-EXTRA_DIST = service.redhat sysv.lsb sysv.redhat
+EXTRA_DIST = service.fedora service.redhat sysv.lsb sysv.redhat
 
 MAINTAINERCLEANFILES = Makefile.in
 
@@ -12,7 +12,7 @@ src_tmpl = @HA_DISTRO@
 if ENABLE_SYSV
 ## legacy init script from template
 
-initdir = /etc/init.d
+initdir = $(sysconfdir)/init.d
 init_SCRIPTS = haveged
 
 haveged:	$(src_tmpl) Makefile
@@ -20,12 +20,18 @@ haveged:	$(src_tmpl) Makefile
 
 endif
 
+if ENABLE_SYSTEMD
+
+install-exec-hook:
+	$(do_subst) < $(srcdir)/$(src_tmpl) > haveged.service;
+
+endif
+
 install-data-hook:
 if ENABLE_SYSTEMD
 ## new style init - requires pkg-config.
-	$(do_subst) < $(srcdir)/$(src_tmpl) > haveged.service; \
-	install -p -m644 haveged.service `pkg-config --variable=systemdsystemunitdir systemd`/haveged.service; \
-	systemctl enable haveged.service;
+	install -p -m644 haveged.service `pkg-config --variable=systemdsystemunitdir systemd`/haveged.service;
+##	systemctl enable haveged.service;
 
 endif
 if ENABLE_NOINIT
