--- a/nist/Makefile.am
+++ b/nist/Makefile.am
@@ -1,6 +1,9 @@
 ## Process this file with automake to produce Makefile.in.
 
+
+if ENABLE_NIST_TEST
 check_PROGRAMS = nist
+endif
 
 AM_CFLAGS=-Wall
 
@@ -11,3 +14,9 @@ nist_SOURCES = cephes.c dfft.c matrix.c nist.c packtest.c special-functions.c ce
 CLEANFILES = sample nist.out
 
 MAINTAINERCLEANFILES = Makefile.in
+
+if ENABLE_NIST_TEST
+check-local:
+	../src/haveged -n 16M $*
+	./nist sample ${srcdir}
+endif
