--- a/init.d/Makefile.am
+++ b/init.d/Makefile.am
@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in.
 
-EXTRA_DIST = service.fedora service.redhat sysv.lsb sysv.redhat
+EXTRA_DIST = service.fedora service.forking service.redhat sysv.lsb sysv.redhat
 
 MAINTAINERCLEANFILES = Makefile.in
 
@@ -8,9 +8,16 @@ CLEANFILES = haveged haveged.service
 
 do_subst = sed -e 's,[@]SBIN_DIR[@],$(sbindir),g'
 src_tmpl = @HA_DISTRO@
+unit_dir = @HA_UNITD@
+
+if ENABLE_NOINIT
+## user will install manually.
+install-exec-hook:
+	@echo "no init script installed";
+endif
 
 if ENABLE_SYSV
-## legacy init script from template
+## legacy init script - installation via automake defaults
 
 initdir = $(sysconfdir)/init.d
 init_SCRIPTS = haveged
@@ -21,20 +28,17 @@ haveged:	$(src_tmpl) Makefile
 endif
 
 if ENABLE_SYSTEMD
+## systemd script - lookup unitdir if not specified
 
 install-exec-hook:
 	$(do_subst) < $(srcdir)/$(src_tmpl) > haveged.service;
 
-endif
-
 install-data-hook:
-if ENABLE_SYSTEMD
-## new style init - requires pkg-config.
+if ENABLE_SYSTEMD_LOOKUP
 	install -p -m644 haveged.service `pkg-config --variable=systemdsystemunitdir systemd`/haveged.service;
-##	systemctl enable haveged.service;
-
+else
+	install -p -m644 haveged.service ($unit_dir)/haveged.service;
 endif
-if ENABLE_NOINIT
-## user will install if necessary.
-	@echo "no init script installed";
+	systemctl enable haveged.service;
+
 endif
